[project]
name = "qa-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.9",
    "langgraph-checkpoint>=2.1.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
